// ==========================================
// ENUMS (Para los CHECK constraints)
// ==========================================

Enum user_role {
  admin
  vendedor
}

Enum sale_status {
  completada
  anulada
}

Enum movement_type {
  entrada
  salida
  ajuste
}

// ==========================================
// TABLES
// ==========================================

Table users {
  id integer [primary key, increment]
  name varchar(100) [not null]
  email varchar(150) [unique, not null]
  password_hash varchar(255) [not null, note: 'bcrypt hash']
  role user_role [not null, default: 'vendedor']
  active boolean [not null, default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table categories {
  id integer [primary key, increment]
  name varchar(100) [unique, not null]
  description text
  active boolean [not null, default: true]
  created_at timestamp [default: `now()`]
}

Table products {
  id integer [primary key, increment]
  name varchar(150) [not null]
  description text
  category_id integer [not null]
  purchase_price numeric(10,2) [not null, note: 'CHECK >= 0']
  sale_price numeric(10,2) [not null, note: 'CHECK >= 0']
  current_stock integer [not null, default: 0, note: 'CHECK >= 0']
  min_stock integer [not null, default: 10, note: 'CHECK >= 0']
  unit_of_measure varchar(30) [not null, default: 'unidad']
  expiry_date date
  barcode varchar(50) [unique]
  active boolean [not null, default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table customers {
  id integer [primary key, increment]
  name varchar(150) [not null]
  dni varchar(20) [unique]
  phone varchar(20)
  email varchar(150)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table sales {
  id integer [primary key, increment]
  user_id integer [not null]
  customer_id integer [not null, default: 1]
  sale_date timestamp [default: `now()`]
  total numeric(10,2) [not null, note: 'CHECK >= 0']
  status sale_status [not null, default: 'completada']
  observation text
  created_at timestamp [default: `now()`]
}

Table sale_details {
  id integer [primary key, increment]
  sale_id integer [not null]
  product_id integer [not null]
  quantity integer [not null, note: 'CHECK > 0']
  unit_price numeric(10,2) [not null, note: 'CHECK >= 0']
  subtotal numeric(10,2) [not null, note: 'CHECK >= 0']
}

Table inventory_movements {
  id integer [primary key, increment]
  product_id integer [not null]
  user_id integer [not null]
  type movement_type [not null]
  quantity integer [not null, note: 'positivo=entrada, negativo=salida/ajuste']
  stock_before integer [not null]
  stock_after integer [not null]
  reason text
  sale_id integer
  movement_date timestamp [default: `now()`]
}

// ==========================================
// RELATIONSHIPS (FOREIGN KEYS)
// ==========================================

Ref: products.category_id > categories.id
Ref: sales.user_id > users.id
Ref: sales.customer_id > customers.id
Ref: sale_details.sale_id > sales.id [delete: cascade]
Ref: sale_details.product_id > products.id
Ref: inventory_movements.product_id > products.id
Ref: inventory_movements.user_id > users.id
Ref: inventory_movements.sale_id > sales.id

Ref: "products"."id" < "sales"."user_id"